fix(divided): align math img answers to radio buttons

--- a/Content/Styles/Divided/Site.scss
+++ b/Content/Styles/Divided/Site.scss
@@ -49,6 +49,10 @@ html, body {
     padding: 0px;
 }
 
+.number img {
+    margin: -5px 5px 0;
+  }
+
 .spanish>h2, .english>h2 {
     margin: 0 5px;
     text-transform: uppercase;
